<resources>
    <string name="app_name">LiSe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawe</string>
    <string name="nav_header_title">Live Sequencer</string>
    <string name="nav_header_subtitle">Chustle</string>
    <string name="nav_header_desc">Navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="menu_mis_secuencias">My sequences</string>
    <string name="menu_listas">Playlists</string>
    <string name="menu_importar">Import sequence</string>
    <string name="menu_dirigir">Lead</string>
    <string name="menu_seguir">Follow</string>
    <string name="menu_exportar">Export sequence</string>
    <string name="menu_archivos">Files</string>
    <string name="menu_presentacion">Performance</string>
    <string name="agregar_secuencia">New Sequence</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="propiedades_secuencia">Sequence Properties</string>
    <string name="nombre">Name</string>
    <string name="artista">Artist</string>
    <string name="ejemplo_nombre_secuencia">Example: Halo</string>
    <string name="ejemplo_artista_secuencia">Example: Porcupine Tree</string>
    <string name="aceptar">Accept</string>
    <string name="cancelar">Cancel</string>
    <string name="campos_vacios">All the fields are required</string>
    <string name="agregar_pista">New Track</string>
    <string name="guardar">Save changes</string>
    <string name="guardar_copia">Save a copy</string>
    <string name="marcadores">Bookmarks</string>
    <string name="editar_marcador">Edit Bookmark</string>
    <string name="pulsos">Pulses</string>
    <string name="anotaciones">Notes</string>
    <string name="audio">Audio</string>
    <string name="nombre_del_marcador">Bookmark name</string>
    <string name="nueva_pista_marcadores">New bookmarks track</string>
    <string name="ejemplo_pista_marcador">Example: Key changes</string>
    <string name="ejemplo_nombre_marcador">Example: A minor</string>
    <string name="compas_inicio">Starting bar</string>
    <string name="ejemplo_numero">A number greater than 0</string>
    <string name="iniciar_en">Starts on</string>
    <string name="compas">Bar</string>
    <string name="tiempo">Time</string>
    <string name="tiempo_inicio">Starting time</string>
    <string name="horas">Hours</string>
    <string name="minutos">Minutes</string>
    <string name="segundos">Seconds</string>
    <string name="milisegundos">Milliseconds</string>
    <string name="no_numero">Not an number</string>
    <string name="error_formato_hora">Time formatted</string>
    <string name="agregar_marcador">Add Bookmark</string>
    <string name="error_nombre_vacio">The name can not be blank</string>
    <string name="error_compas">That bar doesn\'t exists</string>
    <string name="bpm">Beats per minute</string>
    <string name="guardar_preguntar">Exit whithout saving your changes?</string>
    <string name="no_guardar">Don\'t save</string>
    <string name="no_salir">Don\'t exit</string>
    <string name="guardado_correctamente">Saved successfully</string>
    <string name="eliminar_marcador">Delete bookmark?</string>
    <string name="eliminar">Delete</string>
    <string name="eliminar_preguntar">Do you want to delete this element?</string>
    <string name="eliminado_completo">Deleted successfully</string>
    <string name="renombrar">Rename</string>
    <string name="ejemplo_texto">Any text</string>
    <string name="metrica_compas">Time signature</string>
    <string name="agregar_pulso">Add Pulse</string>
    <string name="editar_pulso">Pulse Edit</string>
    <string name="cantidad_figuras">Beat count</string>
    <string name="figura">Figure</string>
    <string name="patron_metronomo">Metronome Pattern</string>
    <string name="ejemplo_anotacion">Example:\n    A multiline text</string>
    <string name="anotacion">Note</string>
    <string name="restante">Remaining</string>
    <string name="agregar_anotacion">Add note</string>
    <string name="editar_anotacion">Edit note</string>
    <string name="nueva_pista_anotaciones">New notes track</string>
    <string name="error_anotacion_vacia">Note can\'t be empty</string>
    <string name="eliminar_anotacion">Delete note?</string>

</resources>