<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_dst_mis_secuencias">

    <fragment
        android:id="@+id/nav_dst_mis_secuencias"
        android:name="com.chustle.lise.ui.mis_secuencias.MisSecuenciasFragment"
        android:label="@string/menu_mis_secuencias"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/nav_dst_listas"
        android:name="com.chustle.lise.ui.mis_listas.MisListasFragment"
        android:label="@string/menu_listas"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_dst_importar"
        android:name="com.chustle.lise.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_importar"
        tools:layout="@layout/fragment_slideshow" />
</navigation>