<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    //lblNombreMarcador

    <TextView
        android:id="@+id/lblNombreMarcador_DialogFragmentAgregarMarcador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/nombre_del_marcador"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    //txtNombreMarcador

    <EditText
        android:id="@+id/txtNombreMarcador_DialogFragmentAgregarMarcador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/ejemplo_nombre_marcador"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblNombreMarcador_DialogFragmentAgregarMarcador" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreMarcador_DialogFragmentAgregarMarcador">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:text="@string/iniciar_en" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingStart="16dp"
                android:text="@string/compas" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_compas" />

            <Switch
                android:id="@+id/switchCompasTiempo_DialogFragmentEditarMarcador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_time_black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tiempo" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutPorCompas_DialogFragmentEditarMarcador"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="4dp">

            <TextView
                android:id="@+id/lblCompasInicio_DialogFragmentAgregarMarcador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/compas_inicio" />

            <EditText
                android:id="@+id/txtCompasInicio_DialogFragmentEditarPulso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/ejemplo_numero"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutPorTiempo_DialogFragmentEditarMarcador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:paddingTop="4dp">

            <TextView
                android:id="@+id/lblTiempoInicio_DialogFragmentAgregarMarcador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/tiempo_inicio" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="horizontal"
                android:weightSum="4">

                <EditText
                    android:id="@+id/txtHoraInicio_DialogFragmentAgregarMarcador"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/horas"
                    android:gravity="center"
                    android:inputType="number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text=":" />

                <EditText
                    android:id="@+id/txtMinutoInicio_DialogFragmentAgregarMarcador"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/minutos"
                    android:gravity="center"
                    android:inputType="number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text=":" />

                <EditText
                    android:id="@+id/txtSegundoInicio_DialogFragmentAgregarMarcador"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/segundos"
                    android:gravity="center"
                    android:inputType="number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text=":" />

                <EditText
                    android:id="@+id/txtMilisegundoInicio_DialogFragmentAgregarMarcador"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/milisegundos"
                    android:gravity="center"
                    android:inputType="number" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/btnCancelar_dialogFragmentEditarMarcador"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/blanco"
        android:text="@string/cancelar"
        app:layout_constraintEnd_toStartOf="@+id/btnAceptar_dialogFragmentEditarMarcador"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/btnAceptar_dialogFragmentEditarMarcador"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/blanco"
        android:text="@string/aceptar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnCancelar_dialogFragmentEditarMarcador" />

</androidx.constraintlayout.widget.ConstraintLayout>